# commit_linter_plus

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  manage_translations.py  pyproject--.toml  pyproject.toml  pytest.ini  task.py  update_translations.py
locale/es/LC_MESSAGES/: messages.mo  messages.po
locale/pt_BR/LC_MESSAGES/: messages.mo  messages.po
locales/es/LC_MESSAGES/: messages.po
locales/pt_BR/LC_MESSAGES/: messages.po
task_commit/: __init__.py  core.py  init.py  main.py  utils.py
task_commit/locale/es/LC_MESSAGES/: messages.mo
task_commit/locale/pt_BR/LC_MESSAGES/: messages.mo
test/: test_commit.py
