[tool.poetry]
name = "task-commit"
version = "0.1.0"
description = "Ferramenta para auxiliar os commits, junto com git flow ela também fornece auxílio."
authors = ["Walefy Lima <walefylima@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
