[project]
name = "task-commit"
version = "0.1.12"
description = "Tool for formatting commits following the Conventional Commits pattern and recognizing Git Flow branches"
authors = [
    {name = "Walefy Lima", email = "walefylima@gmail.com"},
    {name = "Joilton Silva", email = "dev.joiltonrsilva@proton.me"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inquirer (>=3.4.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
